[package]
name = "revora-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "=20.5.0"

[dev-dependencies]
soroban-sdk = { version = "=20.5.0", features = ["testutils"] }
arbitrary = { version = "=1.3.2", features = ["derive"] }
ed25519-dalek = "=2.0.0"

[features]
default = []
testutils = ["soroban-sdk/testutils"]
